appsero tracker added

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "appsero/client": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "DC\\EDD\\Bkash\\": "includes/"
